--- a/src/app/integration/onboarding/clone-settings/clone-settings.component.html
+++ b/src/app/integration/onboarding/clone-settings/clone-settings.component.html
@@ -24,7 +24,7 @@
                     <div fxLayout="row">
                         <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
                             <p>Reimbursable Expense</p>
-                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
+                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="This section contains the settings for exporting Out-of pocket expenses from Fyle to Xero" matTooltipPosition="above" matTooltipClass="clone-settings">
                         </div>
 
                         <div class="clone-settings--export-type">
@@ -41,6 +41,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/employee-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Employee Mapping</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="Automatically map the employees in Fyle to their corresponding records in Xero Contacts based on a unique parameter." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div>
@@ -58,6 +59,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/document-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Mode of Export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="Reimbursable expense in Fyle will be exported to Xero as Purchase Bill" matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text clone-settings--export-type">
@@ -72,6 +74,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/calendar-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Date of export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="The selected date will reflect in expenses exported to Xero" matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -91,6 +94,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/calendar-disabled.svg">
                                 <p class="clone-settings--sub-options-text">State of export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="You could choose to export expenses when they have been approved and are awaiting payment clearance, OR simply when they have been paid out." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -108,7 +112,7 @@
                     <div fxLayout="row">
                         <div class="clone-settings--field-section" fxLayout="row" fxLayoutAlign="start center">
                             <p>Corporate Card Expense</p>
-                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg">
+                            <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="This section contains the settings for exporting expenses paid by Corporate Credit Cards" matTooltipPosition="above" matTooltipClass="clone-settings">
                         </div>
 
                         <div class="clone-settings--export-type">
@@ -125,6 +129,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/document-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Mode of Export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="Corporate card expense in Fyle will be exported to Xero as Bank Transaction" matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text clone-settings--export-type">
@@ -142,6 +147,7 @@
                                     To which Bank account should the transaction be posted?
                                     <app-mandatory-field></app-mandatory-field>
                                 </p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="All the offset entry in the Journal will be posted to the selected Bank account" matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -160,6 +166,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/calendar-disabled.svg">
                                 <p class="clone-settings--sub-options-text">State of export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="You could choose to export expenses when they have been approved and are awaiting payment clearance, OR simply when they have been paid out." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -346,6 +353,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/sync-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Auto - Sync payment between Fyle and Xero</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="When an expense is marked as 'Paid' in Fyle the corresponding transaction will automatically be updated to 'Paid' in Xero and vice versa." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div>
@@ -381,6 +389,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/calendar-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Schedule automatic export</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="Schedule to automate the export of expenses from Fyle to Xero" matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -441,6 +450,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/calendar-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Post entries in the next open accounting period</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="If the accounting period in Xero is closed for the expenses in Fyle that haven't been exported, the expense will be exported with a date stamp of the first day in the next open accounting period." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -456,6 +466,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/document-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Auto-Create Contacts</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="While exporting reimbursable expenses from Fyle, the integration will automatically create a Contact if a match for an employee in Fyle does not exist in Xero already." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -471,6 +482,7 @@
                                 <img class="clone-settings--sub-options-icon"
                                     src="assets/images/svgs/general/document-disabled.svg">
                                 <p class="clone-settings--sub-options-text">Auto-Create Merchants as Contacts</p>
+                                <img class="clone-settings--info-icon" src="assets/images/svgs/general/info-disabled.svg" matTooltip="While exporting corporate card expenses from Fyle, the integration will auto-create a contact in Xero if a merchant added in Fyle does not exist in Xero." matTooltipPosition="above" matTooltipClass="clone-settings">
                             </div>
 
                             <div class="clone-settings--sub-options-text">
@@ -486,11 +498,11 @@
                 <div fxLayoutAlign="space-between center" class="clone-settings--footer-inner-section">
                     <div fxLayoutAlign="start center">
                         <div fxLayoutAlign="start center">
-                            <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer clone-settings--back-btn" (click)="navigateToPreviousStep()">
+                            <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer clone-settings--back-btn" (click)="navigateToPreviousStep()" matTooltip="You will be able to re-configure the tenant by clicking here" matTooltipPosition="above" matTooltipClass="clone-settings">
                                 <img src="assets/images/svgs/actions/arrow-mark-left.svg" class="configuration--back-btn-arrow" width="13.5px" height="11.25px" />
                                 <h5 class="btn-icon align-center">Back</h5>
                             </div>
-                            <div fxLayout="row" fxLayoutAlign="center center" class="configuration--back-btn clone-settings--reset-btn pointer" (click)="resetConfiguraions()">
+                            <div fxLayout="row" fxLayoutAlign="center center" class="configuration--back-btn clone-settings--reset-btn pointer" (click)="resetConfiguraions()" matTooltip="You will be redirected to the step-wise configuration flow where you can configure each setting individually." matTooltipPosition="above" matTooltipClass="clone-settings">
                                 <h5>Reset Configurations</h5>
                             </div>
                         </div>
