--- a/src/styles.scss
+++ b/src/styles.scss
@@ -320,6 +320,12 @@ th.mat-header-cell:last-of-type {
     }
   }
 
+  &.clone-settings {
+    @extend .mat-tooltip, .above, .align-center;
+    white-space: normal !important;
+    margin-right: 6px !important;
+  }
+
   &.right {
     overflow: initial;
     margin-left: 1rem;
