--- a/src/app/shared/components/core/header/header.component.html
+++ b/src/app/shared/components/core/header/header.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <img *ngIf="showBackButton && activePage" class="navbar--back-btn pointer" (click)="navigateBack()" src="assets/images/svgs/actions/arrow-mark-left-back.svg" data-cy="arrow-back"/>
-    <h3 [ngClass]="showBackButton && activePage ? 'navbar--page-name-with-back-btn' : 'navbar--page-name'" data-cy="nav-bar-page-name">{{ activePage | titlecase | snakeCaseToSpaceCase }}</h3>
+    <h3 [ngClass]="showBackButton && activePage ? 'navbar--page-name-with-back-btn' : 'navbar--page-name'" data-cy="nav-bar-page-name">{{ decode(activePage) | titlecase | snakeCaseToSpaceCase }}</h3>
   </div>
   <div fxLayout="row" fxLayoutAlign="space-between center" class="navbar--profile-help">
     <div #helpButton (click)="showOrHideHelpDropdown()" fxLayout="row" class="navbar--help-section pointer">
