--- a/src/app/shared/components/helpers/paginator/paginator.component.html
+++ b/src/app/shared/components/helpers/paginator/paginator.component.html
@@ -7,7 +7,7 @@
       </h5>
       <mat-form-field floatLabel="always" appearance="outline" class="paginator--page-size-input-field" data-cy="paginator-page-size-input-field">
         <mat-select formControlName="pageLimit" data-cy="paginator-page-limit">
-          <mat-option *ngFor="let number of [25, 50, 100, 200, 500]" [value]="number" data-cy="paginator-page-limit-option">
+          <mat-option *ngFor="let number of [25, 50, 100, 200]" [value]="number" data-cy="paginator-page-limit-option">
             {{ number }}
           </mat-option>
         </mat-select>
